@@ -27,13 +27,14 @@ import com.signalcollect.evaluation.resulthandling._
 import com.signalcollect._
 import com.signalcollect.nodeprovisioning.Node
 import com.signalcollect.nodeprovisioning.local._
+import com.signalcollect.factory.messagebus.BulkFloatSummer
 
 object LoadWebGraph extends App {
 
   /*
    * Config
    */
-  val runName = "Scala 2.10-M7"
+  val runName = "Kraken Bulk Float Summer 24-480 Splits"
 
   val localMode = false
   val locationSplits = if (localMode) "/Users/" + System.getProperty("user.name") + "/webgraph/" else "/home/torque/tmp/webgraph-tmp"
@@ -49,28 +50,63 @@ object LoadWebGraph extends App {
         torqueUsername = System.getProperty("user.name"))
     })
 
-  for (splits <- List(24)) {
-    //  for (splits <- List(2)) {
-    //  for (splits <- List(1)) {
-    evaluation.addJobForEvaluationAlgorithm(new PageRankForWebGraph(
-      jvmParams = "-XX:+UseNUMA -XX:+UseCondCardMark -XX:+UseParallelGC", //-XX:AutoBoxCacheMax=10000  -XX:MaxGCPauseMillis=50 -XX:+UseG1GC -XX:+DoEscapeAnalysis -XX:+UseNUMA -XX:+UseG1GC -XX:+UseNUMA -XX:+DoEscapeAnalysis -agentpath:./profiler/libyjpagent.so
-      jdkBinaryPath = "", // "./jdk1.8.0/bin"
-      //      jvmParams = "-XX:+UseNUMA -XX:+UseCondCardMark -XX:+UseParallelGC -XX:+DoEscapeAnalysis", //if (localMode) "" else " -agentpath:./profiler/libyjpagent.so ",  //-XX:+UseNUMA -XX:+UseCondCardMark -XX:+UseParallelGC
-      graphBuilder = if (localMode) {
-        GraphBuilder.withNodeProvisioner(new LocalNodeProvisioner {
-          override def getNodes: List[Node] = {
-            List(new LocalNode {
-              override def numberOfCores = 4
-            })
-          }
-        })
-      } else {
-        GraphBuilder.withWorkerFactory(factory.worker.CollectFirstAkka)
-      },
-      graphProvider = new WebGraphParserGzip(locationSplits, loggerFile, splitsToParse = splits, numberOfWorkers = if (localMode) 4 else 24),
-      runConfiguration = ExecutionConfiguration.withExecutionMode(ExecutionMode.PureAsynchronous),
-      dummyVertices = false
-    ))
+  // To test: -XX:+AggressiveOpts
+  // -XX:+UseBiasedLocking
+  //-XX:ParallelGCThreads=20 +
+  //XX:ParallelCMSThreads=n +
+  //-XX:+CMSIncrementalMode +
+  //-XX:+CMSIncrementalPacing +
+  //-XX:+AggressiveHeap -> crahes, i guess
+
+  // BEST SO FAR: "-XX:+UnlockExperimentalVMOptions -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:+CMSIncrementalMode -XX:ParallelGCThreads=20 -XX:ParallelCMSThreads=20 -XX:+UseNUMA -XX:+UseFastAccessorMethods", 
+  //"-XX:+UnlockExperimentalVMOptions -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:+CMSIncrementalMode -XX:ParallelGCThreads=20 -XX:ParallelCMSThreads=20 -XX:+UseNUMA -XX:+UseFastAccessorMethods"
+  //"-XX:+UnlockExperimentalVMOptions -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:+CMSIncrementalMode"
+  //jvmParams = "-XX:+UseNUMA -XX:+UseCondCardMark -XX:+UseParallelGC -XX:+DoEscapeAnalysis", //if (localMode) "" else " -agentpath:./profiler/libyjpagent.so ",  //-XX:+UseNUMA -XX:+UseCondCardMark -XX:+UseParallelGC
+  //-XX:AutoBoxCacheMax=10000  -XX:MaxGCPauseMillis=50 -XX:+UseG1GC -XX:+DoEscapeAnalysis -XX:+UseNUMA -XX:+UseG1GC -XX:+UseNUMA -XX:+DoEscapeAnalysis -agentpath:./profiler/libyjpagent.so -XX:+UseCondCardMark -XX:+UseParallelGC
+  //"-XX:+UnlockExperimentalVMOptions -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+UseTLAB", "-XX:+UnlockExperimentalVMOptions -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+DoEscapeAnalysis -XX:+UseCondCardMark"
+  //"-XX:ParallelGCThreads=20 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:SurvivorRatio=8 -XX:TargetSurvivorRatio=90 -XX:MaxTenuringThreshold=31"
+  val baseOptions = 
+    " -Xmx64000m" +
+    " -Xms64000m" +
+    " -Xmn8000m" +
+    " -d64"
+  val repetitions = 1
+  for (
+    jvmParams <- List(
+      " -XX:+UnlockExperimentalVMOptions" +
+      " -XX:+UseConcMarkSweepGC" +
+      " -XX:+UseParNewGC" +
+      " -XX:+CMSIncrementalPacing" +
+      " -XX:+CMSIncrementalMode" +
+      " -XX:ParallelGCThreads=20" +
+      " -XX:ParallelCMSThreads=20" +
+      " -agentpath:./profiler/libyjpagent.so"
+     )
+  ) {
+    for (repetition <- 1 to repetitions) {
+      for (jvm <- List("")) { //, "./jdk1.8.0/bin/"
+        for (splits <- List(24, 48, 96, 182, 384, 480)) { //480
+          evaluation.addJobForEvaluationAlgorithm(new PageRankForWebGraph(
+            memoryStats = false,
+            jvmParams = jvmParams + baseOptions,
+            jdkBinaryPath = jvm,
+            graphBuilder = if (localMode) {
+              GraphBuilder.withNodeProvisioner(new LocalNodeProvisioner {
+                override def getNodes: List[Node] = {
+                  List(new LocalNode {
+                    override def numberOfCores = 4
+                  })
+                }
+              }).withMessageBusFactory(BulkFloatSummer)
+            } else {
+              GraphBuilder.withWorkerFactory(factory.worker.CollectFirstAkka).withMessageBusFactory(BulkFloatSummer)
+            },
+            graphProvider = new WebGraphParserGzip(locationSplits, loggerFile, splitsToParse = splits, numberOfWorkers = if (localMode) 4 else 24),
+            runConfiguration = ExecutionConfiguration.withExecutionMode(ExecutionMode.PureAsynchronous)
+          ))
+        }
+      }
+    }
   }
 
   evaluation.setResultHandlers(List(new ConsoleResultHandler(true), new GoogleDocsResultHandler(args(0), args(1), "evaluation", "data")))
